--- a/stylesheet.css
+++ b/stylesheet.css
@@ -154,12 +154,6 @@ label {
     width: 50px;
 }
 
-.ears:hover {
-    background-color: #17255C;
-    transition: 0.2s;
-    cursor: pointer;
-}
-
 /*LINKS*/
 a {
     text-decoration: none;
@@ -188,6 +182,13 @@ footer p {
 }
 
 /*MEDIA QUERIES*/
+@media (hover: hover) {
+    .ears:hover {
+        background-color: #17255C;
+        transition: 0.2s;
+        cursor: pointer;
+    }
+}
 /*FOR TABLETS*/
 @media only screen and (max-width: 1024px) {
     h1 {
